<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>planb_ros2</name>
    <version>0.1.0</version>
    <description>Planb</description>

    <maintainer email="liunx163@163.com">Liunx</maintainer>
    <license>BSD</license>

    <url type="repository"></url>
    <url type="bugtracker"></url>

    <author>Liunx</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <depend>class_loader</depend>
    <depend>libopencv-dev</depend>
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>planb_interfaces</depend>
    <depend>behaviortree_cpp_v3</depend>

    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
