<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>planb_launch</name>
    <version>0.1.0</version>
    <description>Planb</description>
    <maintainer email="liunx163@163.com">Liunx</maintainer>
    <license>BSD</license>
    <url type="repository"></url>
    <url type="bugtracker"></url>
    <author>Liunx</author>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>planb_core</depend>
    <depend>planb_cv</depend>
    <depend>planb_hw</depend>
    <depend>planb_test</depend>
    <exec_depend>ros2launch</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
